--- a/app/partials/detailtable.html
+++ b/app/partials/detailtable.html
@@ -1,34 +1,34 @@
 <table class="table table-condensed">
-	<tr ng-show='ifHasProperty(cho._source["edm:providedCHO"]["dc:title"])'>
+	<tr ng-show='aggregation._source["edm:aggregatedCHO"]["dc:title"]'>
 	<td>Titel:</td>
-	<td>{{cho._source["edm:providedCHO"]["dc:title"]}}</td></tr>
+	<td>{{aggregation._source["edm:aggregatedCHO"]["dc:title"]}}</td></tr>
 
-	<tr ng-show='ifHasProperty(cho._source["edm:providedCHO"]["dc:identifier"])'>
+	<tr ng-show='aggregation._source["edm:aggregatedCHO"]["dc:identifier"]'>
 	<td>Identifier:</td>
-	<td>{{cho._source["edm:providedCHO"]["dc:identifier"] | json}}</td></tr>
+	<td>{{aggregation._source["edm:aggregatedCHO"]["dc:identifier"] | json}}</td></tr>
 
-	<tr ng-show='ifHasProperty(cho._source["edm:providedCHO"]["dc:creator"])'>
+	<tr ng-show='aggregation._source["edm:aggregatedCHO"]["dc:creator"]'>
 	<td>Autor:</td>
-	<td>{{cho._source["edm:providedCHO"]["dc:creator"]}}</td></tr>
+	<td>{{aggregation._source["edm:aggregatedCHO"]["dc:creator"]}}</td></tr>
 
-	<tr ng-show='ifHasProperty(cho._source["edm:dataProvider"]["dc:title"])'>
+	<tr ng-show='aggregation._source["edm:dataProvider"]["dc:title"]'>
 	<td>Herkunft:</td>
-	<td>{{cho._source["edm:dataProvider"]["dc:title"]}}<div ng-show='ifHasProperty(cho._source["edm:dataProvider"]["dc:type"])'>
-	({{cho._source["edm:dataProvider"]["dc:type"]}})</div></td></tr>
+	<td>{{aggregation._source["edm:dataProvider"]["dc:title"]}}<div ng-show='ifHasProperty(aggregation._source["edm:dataProvider"]["dc:type"])'>
+	({{aggregation._source["edm:dataProvider"]["dc:type"]}})</div></td></tr>
 
-	<tr ng-show='ifHasProperty(cho._source["edm:providedCHO"]["dc:rights"])'>
+	<tr ng-show='aggregation._source["edm:aggregatedCHO"]["dc:rights"]'>
 	<td>Copyright / Rechtsvermerke:</td>
-	<td>{{cho._source["edm:providedCHO"]["dc:rights"]}}</td></tr>
+	<td>{{aggregation._source["edm:aggregatedCHO"]["dc:rights"]}}</td></tr>
 
-	<tr ng-show='ifHasProperty(cho._source["edm:providedCHO"]["dc:description"])'>
+	<tr ng-show='aggregation._source["edm:aggregatedCHO"]["dc:description"]'>
 	<td>Beschreibung:</td>
-	<td>{{cho._source["edm:providedCHO"]["dc:description"]}}</td></tr>
+	<td>{{aggregation._source["edm:aggregatedCHO"]["dc:description"]}}</td></tr>
 
-	<tr ng-show='ifHasProperty(cho._source["edm:providedCHO"]["dcterms:spatial"])'>
+	<tr ng-show='aggregation._source["edm:aggregatedCHO"]["dcterms:spatial"]'>
 	<td>Ortsangaben:</td>
-	<td><button class="btn btn-info btn-small" ng-repeat="location in cho._source['edm:providedCHO']['dcterms:spatial']">{{location}}</button></td></tr>
+	<td><button class="btn btn-info btn-small" ng-repeat="location in aggregation._source['edm:aggregatedCHO']['dcterms:spatial']">{{location}}</button></td></tr>
 
-	<tr ng-show='ifHasProperty(cho._source["edm:providedCHO"]["dc:date"])'>
+	<tr ng-show='aggregation._source["edm:aggregatedCHO"]["dc:date"]'>
 	<td>Datum:</td>
-	<td>{{cho._source["edm:providedCHO"]["dc:date"]}}</td></tr>
+	<td>{{aggregation._source["edm:aggregatedCHO"]["dc:date"]}}</td></tr>
 </table>
