--- a/app/partials/list.html
+++ b/app/partials/list.html
@@ -1,38 +1,66 @@
-<div ng-controller="ListCtrl">
+<div ng-controller="ListCtrl" class="container-fluid">
 
-	<br>
-	<br>
-	<br>
-	<br>
-	<div class="container-fluid">
-    <div class="row-fluid">
-      <div class="span8">
+	<div class="row-fluid">
+	
+		<div class="span3 well">
+			<ul ng-show="facets.providers" class="nav nav-list">
+				<li class="nav-header">Institution</li>
+				<li ng-repeat="term in facets.providers.terms">
+					<a ng-href="#/?q={{q}}&facet.providers={{term.term}}">{{term.term}} ({{term.count}})</a>
+				</li>
+			</ul>
+			<ul ng-show="facets.formats" class="nav nav-list">
+				<li class="nav-header">Formate</li>
+				<li ng-repeat="term in facets.formats.terms">
+					<a ng-href="#/?q={{q}}&facet.formats={{term.term}}">{{term.term}} ({{term.count}})</a>
+				</li>
+			</ul>
+		</div>
 
+		<div class="span6">
+	
+			<div class="row-fluid">
+				<div class="span6" >
+					<h4>{{total}} Treffer</h4>
+				</div>
+				<div class="span6">
+					<div class="pagination pull-right">
+						<ul>
+							<li ng-class="{disabled:(from <= 0)}"><a ng-click="prevPage()">«</a></li>
+							<li class="disabled">
+								<a>
+									Seite {{page()}} / {{totalPages()}}
+								</a>
+							</li>
+							<li ng-class="{disabled:(from > (total - 10))}"><a ng-click="nextPage()">»</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+	
+			<div class="row-fluid">
+
+			  <div class="span12">
 				<table class="table table-striped">
-					<tr ng-repeat="cho in chos">
-						<td><a ng-href="#/chos/{{cho._id}}">{{cho._source["edm:providedCHO"]["dc:title"]}}</a></td>
-						<td>{{cho._source["edm:dataProvider"]["dc:title"]}}</td>
-						<td><button type="button" class="btn btn-mini disabled" ng-mouseover="previewCho(cho)">&gt;</button></td>
+					<tr ng-repeat="aggregation in aggregations"
+							ng-class="{info:(aggregation._id == focused._id)}"
+							ng-mouseover="preview(aggregation)" ng-mouseout="preview(null)">
+						<td><a ng-href="#/detail/{{aggregation._id}}">{{aggregation._source["edm:aggregatedCHO"]["dc:title"]}}</a></td>
+						<!--<td>{{aggregation._source["edm:dataProvider"]}}</td>-->
+						<td><button type="button" class="btn btn-mini disabled">&gt;</button></td>
 					</tr>
 				</table>
-
-				Debug: {{selectedPage}}
-				<div class="pagination">
-					<ul>
-						<li ng-repeat="page in pages">
-							<a ng-click="selectPage(page)">{{page+1}}</a></td>		
-						</li>	
-					</ul>
-				</div>
-
+			  </div>
+			  
 			</div>
+		
+		</div>
 
-			<div class="span4">
-				<a ng-href="#/chos/{{focused_cho._id}}"><img src="{{focused_cho._source['edm:object']['@id']}}"></a>
-				<p>{{focused_cho._source['edm:providedCHO']['dc:description']}}</p>
-
+		<div class="span3" ng-show="focused">
+			<a ng-href="#/detail/{{focused._id}}"><img ng-src="{{getThumb(focused._source)}}"></a>
+			<p>{{focused._source['edm:aggregatedCHO']['dc:description']}}</p>
+		</div>
+		
 	</div>
-
-	<h1>{{}}</h1>
 
 </div>
